--- a/mat-menu.html
+++ b/mat-menu.html
@@ -7,10 +7,10 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to display a material menu.
+This element is used to display a material menu.
 
-@component mat-menu
-@description This component is used to display a material menu.
+@element mat-menu
+@description This element is used to display a material menu.
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
@@ -49,7 +49,7 @@ This component is used to display a material menu.
     </template>
 
     <script>
-        XPComponent({
+        XPElement({
 
             /**
              * Hides the menu.
