--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -7,10 +7,10 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to display a material submenu.
+This element is used to display a material submenu.
 
-@component mat-submenu
-@description This component is used to display a material submenu.
+@element mat-submenu
+@description This element is used to display a material submenu.
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
@@ -61,7 +61,7 @@ This component is used to display a material submenu.
     </template>
 
     <script>
-        XPComponent({
+        XPElement({
 
             /**
              * Hides the submenu.
