--- a/mat-menu.html
+++ b/mat-menu.html
@@ -11,6 +11,8 @@ This element is used to display a material menu.
 
 @element mat-menu
 @description This element is used to display a material menu.
+@homepage http://www.expandjs.com/elements/mat-menu
+@demo http://www.expandjs.com/demo/mat-menu
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
