--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -11,6 +11,8 @@ This element is used to display a material submenu.
 
 @element mat-submenu
 @description This element is used to display a material submenu.
+@homepage http://www.expandjs.com/elements/mat-submenu
+@demo http://www.expandjs.com/demo/mat-menu
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
