--- a/mat-menu.html
+++ b/mat-menu.html
@@ -40,7 +40,7 @@ This element is used to display a material menu.
                 position: absolute;
             }
 
-            :host([cascade])::shadow #matOverlayBody {
+            :host([cascade]) #matMenuWrapper::shadow #matOverlayBody {
                 padding: 16px 0;
             }
         </style>
