--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2015 The expand.js authors. All rights reserved.
+Copyright (c) 2015 The ExpandJS authors. All rights reserved.
 This code may only be used under the BSD style license found at https://expandjs.github.io/LICENSE.txt
 The complete set of authors may be found at https://expandjs.github.io/AUTHORS.txt
 The complete set of contributors may be found at https://expandjs.github.io/CONTRIBUTORS.txt
@@ -10,7 +10,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 This element is used to display a material submenu.
 
 @element mat-submenu
-@description This element is used to display a material submenu.
+@description A custom element used to display a Material Design submenu
 @homepage http://www.expandjs.com/elements/mat-submenu
 @demo http://www.expandjs.com/demo/mat-menu
 
