--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
     </head>
 
     <!-- BODY -->
-    <body fullbleed>
+    <body fullbleed unresolved>
 
         <polymer-element name="mat-menu-demo" noscript>
 
