--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -66,6 +66,20 @@ This element is used to display a material submenu.
         XPElement({
 
             /**
+             * Fired when the slave is attached.
+             *
+             * @event xp-slave
+             * @param {Element} firer
+             * @param {Element} slave
+             * @param {string} masterSelector
+             * @param {string} masterTag
+             * @param {boolean} isAttached
+             * @bubbles
+             */
+
+            /*********************************************************************/
+
+            /**
              * Hides the submenu.
              *
              * @method hide
