--- a/demo-element.html
+++ b/demo-element.html
@@ -10,7 +10,7 @@
     <template>
         <mat-demo label="mat-menu">
 
-            <h1>Default</h1>
+            <div class="title">Default</div>
             <mat-menu-button target="menu"></mat-menu-button>
             <mat-menu id="menu">
                 <mat-option label="Option 1"></mat-option>
@@ -18,7 +18,7 @@
                 <mat-option label="Option 3"></mat-option>
             </mat-menu>
 
-            <h1>Cascading</h1>
+            <div class="title">Cascading</div>
             <mat-menu-button target="cascadingMenu"></mat-menu-button>
             <mat-menu id="cascadingMenu">
                 <mat-option label="Option 1" toggleable active></mat-option>
@@ -37,7 +37,7 @@
                 </mat-submenu>
             </mat-menu>
 
-            <h1>Autocenter</h1>
+            <div class="title">Autocenter</div>
             <mat-menu-button target="autoCenterMenu"></mat-menu-button>
             <mat-menu id="autoCenterMenu" autocenter>
                 <mat-option label="Option 1"></mat-option>
@@ -45,7 +45,7 @@
                 <mat-option label="Option 3"></mat-option>
             </mat-menu>
 
-            <h1>Aside</h1>
+            <div class="title">Aside</div>
             <mat-menu-button target="asideMenu"></mat-menu-button>
             <mat-menu id="asideMenu" position="aside">
                 <mat-option label="Option 1"></mat-option>
@@ -53,7 +53,7 @@
                 <mat-option label="Option 3"></mat-option>
             </mat-menu>
 
-            <h1>Baseline</h1>
+            <div class="title">Baseline</div>
             <mat-menu-button target="baselineMenu"></mat-menu-button>
             <mat-menu id="baselineMenu" position="baseline">
                 <mat-option label="Option 1"></mat-option>
