--- a/demo-element.html
+++ b/demo-element.html
@@ -11,16 +11,16 @@
         <mat-demo label="mat-menu">
 
             <div class="demo-title">Default</div>
-            <mat-menu-button target="menu"></mat-menu-button>
-            <mat-menu id="menu">
+            <mat-menu-button target="demoDefault"></mat-menu-button>
+            <mat-menu id="demoDefault">
                 <mat-option label="Option 1"></mat-option>
                 <mat-option label="Option 2"></mat-option>
                 <mat-option label="Option 3"></mat-option>
             </mat-menu>
 
             <div class="demo-title">Cascading</div>
-            <mat-menu-button target="cascadingMenu"></mat-menu-button>
-            <mat-menu id="cascadingMenu">
+            <mat-menu-button target="demoCascading"></mat-menu-button>
+            <mat-menu id="demoCascading">
                 <mat-option label="Option 1" toggleable active></mat-option>
                 <mat-option label="Option 2" toggleable></mat-option>
                 <mat-option label="Option 3" toggleable></mat-option>
@@ -35,30 +35,6 @@
                     <mat-option label="Sub option 2"></mat-option>
                     <mat-option label="Sub option 3"></mat-option>
                 </mat-submenu>
-            </mat-menu>
-
-            <div class="demo-title">Autocenter</div>
-            <mat-menu-button target="autoCenterMenu"></mat-menu-button>
-            <mat-menu id="autoCenterMenu" autocenter>
-                <mat-option label="Option 1"></mat-option>
-                <mat-option label="Option 2"></mat-option>
-                <mat-option label="Option 3"></mat-option>
-            </mat-menu>
-
-            <div class="demo-title">Aside</div>
-            <mat-menu-button target="asideMenu"></mat-menu-button>
-            <mat-menu id="asideMenu" position="aside">
-                <mat-option label="Option 1"></mat-option>
-                <mat-option label="Option 2"></mat-option>
-                <mat-option label="Option 3"></mat-option>
-            </mat-menu>
-
-            <div class="demo-title">Baseline</div>
-            <mat-menu-button target="baselineMenu"></mat-menu-button>
-            <mat-menu id="baselineMenu" position="baseline">
-                <mat-option label="Option 1"></mat-option>
-                <mat-option label="Option 2"></mat-option>
-                <mat-option label="Option 3"></mat-option>
             </mat-menu>
 
         </mat-demo>
