--- a/mat-menu.html
+++ b/mat-menu.html
@@ -11,6 +11,7 @@ This element is used to display a material menu.
 
 @element mat-menu
 @description A custom element used to display a Material Design menu
+@group overlays
 @homepage http://www.expandjs.com/elements/mat-menu
 @demo http://www.expandjs.com/demo/mat-menu
 
