--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -11,6 +11,7 @@ This element is used to display a material submenu.
 
 @element mat-submenu
 @description A custom element used to display a Material Design submenu
+@group overlays
 @homepage http://www.expandjs.com/elements/mat-submenu
 @demo http://www.expandjs.com/demo/mat-menu
 
