--- a/mat-menu.html
+++ b/mat-menu.html
@@ -31,7 +31,7 @@ This element is used to display a material menu.
 <link rel="import" href="../mat-overlay/mat-overlay.html">
 <link rel="import" href="../xp-master-state/xp-master-state.html">
 
-<polymer-element name="mat-menu" constructor="MATMenuElement" attributes="background cascade data showed submenus target">
+<polymer-element name="mat-menu" attributes="background cascade data showed submenus target">
 
     <template>
         <style>
