--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -35,7 +35,7 @@ This element is used to display a material submenu.
 <link rel="import" href="../xp-master-state/xp-master-state.html">
 <link rel="import" href="../xp-slave-state/xp-slave-state.html">
 
-<polymer-element name="mat-submenu" constructor="MATSubmenuElement" attributes="data empty icon iconSrc label showed submenus">
+<polymer-element name="mat-submenu" attributes="data empty icon iconSrc label showed submenus">
 
     <template>
         <style>
