--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -12,8 +12,8 @@ This element is used to display a material submenu.
 @element mat-submenu
 @description A custom element used to display a Material Design submenu
 @group overlays
-@homepage http://www.expandjs.com/elements/mat-submenu
-@demo http://www.expandjs.com/demo/mat-menu
+@homepage http://expandjs.com/elements/mat-submenu
+@demo http://expandjs.com/demo/mat-menu
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
