--- a/mat-menu.html
+++ b/mat-menu.html
@@ -12,8 +12,8 @@ This element is used to display a material menu.
 @element mat-menu
 @description A custom element used to display a Material Design menu
 @group overlays
-@homepage http://www.expandjs.com/elements/mat-menu
-@demo http://www.expandjs.com/demo/mat-menu
+@homepage http://expandjs.com/elements/mat-menu
+@demo http://expandjs.com/demo/mat-menu
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
