--- a/mat-menu.html
+++ b/mat-menu.html
@@ -11,6 +11,7 @@ This element is used to display a material menu.
 
 @element mat-menu
 @description A custom element used to display a Material Design menu
+@keywords material design, material menu, web app, html5, expandjs
 @group overlays
 @homepage http://expandjs.com/elements/mat-menu
 @demo http://expandjs.com/demo/mat-menu
