--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -11,7 +11,7 @@ This element is used to display a material submenu.
 
 @element mat-submenu
 @description A custom element used to display a Material Design submenu
-@keywords material design, material menu, web app, html5, expandjs
+@keywords material design, material menu, web app, html5, expandjs, web-components
 @group overlays
 @homepage http://expandjs.com/elements/mat-submenu
 @demo http://expandjs.com/demo/mat-menu
