--- a/mat-menu.html
+++ b/mat-menu.html
@@ -55,6 +55,9 @@ This element is used to display a material menu.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'mat-menu',
+
             /**
              * Hides the menu.
              *
