--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -67,6 +67,11 @@ This element is used to display a material submenu.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'mat-submenu',
+
+            /*********************************************************************/
+
             /**
              * Fired when the slave is attached.
              *
