--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -46,6 +46,7 @@ This element is used to display a material submenu.
             }
 
             :host #matSubmenuHolder::shadow #matOptionSecondaryIcon {
+                -webkit-transform: rotate(-90deg);
                 transform: rotate(-90deg);
             }
 
