--- a/mat-menu.html
+++ b/mat-menu.html
@@ -16,16 +16,16 @@ This element is used to display a material menu.
 @homepage http://expandjs.com/elements/mat-menu
 @demo http://expandjs.com/demo/mat-menu
 
-@dependency polymer Polymer/polymer
-@dependency expandjs ExpandJS/expandjs
-@dependency mat-overlay ExpandJS/mat-overlay
-@dependency xp-master-state ExpandJS/xp-master-state
-@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior
+@dependency polymer Polymer/polymer#^1.0.4
+@dependency expandjs ExpandJS/expandjs#0.9.1
+@dependency mat-overlay ExpandJS/mat-overlay#0.9.1
+@dependency xp-master-state ExpandJS/xp-master-state#0.9.1
+@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.1
 
-@devDependency mat-demo ExpandJS/mat-demo
-@devDependency mat-divider ExpandJS/mat-divider
-@devDependency mat-menu-button ExpandJS/mat-menu-button
-@devDependency mat-option ExpandJS/mat-option
+@devDependency mat-demo ExpandJS/mat-demo#0.9.1
+@devDependency mat-divider ExpandJS/mat-divider#0.9.1
+@devDependency mat-menu-button ExpandJS/mat-menu-button#0.9.1
+@devDependency mat-option ExpandJS/mat-option#0.9.1
 -->
 
 <link rel="import" href="../polymer/polymer.html">
@@ -49,7 +49,7 @@ This element is used to display a material menu.
     </style>
 
     <template>
-        <xp-master-state id="xpMasterState" slaves="{{submenus}}" slaveTag="mat-submenu" on-slaves-changed="_handleSlaves"></xp-master-state>
+        <template is="xp-master-state" id="xpMasterState" slaves="{{submenus}}" slave-tag="mat-submenu" on-slaves-changed="_handleSlaves"></template>
         <mat-overlay id="matMenuWrapper" background="[[background]]" data="{{data}}" position="[[_computePosition(cascade)]]" showed="{{showed}}" target="{{target}}" z="[[z]]">
             <content id="content"></content>
         </mat-overlay>
