--- a/demo-element.html
+++ b/demo-element.html
@@ -8,17 +8,44 @@
 <dom-module id="mat-menu-demo">
 
     <template>
-        <mat-demo label="mat-menu">
 
-            <div class="demo-title">Default</div>
+        <mat-demo label="mat-menu">
+            <script type="text/html">
+                <mat-menu-button target="demoDefault"></mat-menu-button>
+                <mat-menu id="demoDefault">
+                    <mat-option label="Option 1"></mat-option>
+                    <mat-option label="Option 2"></mat-option>
+                    <mat-option label="Option 3"></mat-option>
+                </mat-menu>
+            </script>
             <mat-menu-button target="demoDefault"></mat-menu-button>
             <mat-menu id="demoDefault">
                 <mat-option label="Option 1"></mat-option>
                 <mat-option label="Option 2"></mat-option>
                 <mat-option label="Option 3"></mat-option>
             </mat-menu>
+        </mat-demo>
 
-            <div class="demo-title">Cascading</div>
+        <mat-demo label="Cascading">
+            <script type="text/html">
+                <mat-menu-button target="demoCascading"></mat-menu-button>
+                <mat-menu id="demoCascading">
+                    <mat-option label="Option 1" toggleable active></mat-option>
+                    <mat-option label="Option 2" toggleable></mat-option>
+                    <mat-option label="Option 3" toggleable></mat-option>
+                    <mat-divider></mat-divider>
+                    <mat-submenu label="Option 4">
+                        <mat-option label="Sub option 1"></mat-option>
+                        <mat-option label="Sub option 2"></mat-option>
+                        <mat-option label="Sub option 3"></mat-option>
+                    </mat-submenu>
+                    <mat-submenu label="Option 5">
+                        <mat-option label="Sub option 1"></mat-option>
+                        <mat-option label="Sub option 2"></mat-option>
+                        <mat-option label="Sub option 3"></mat-option>
+                    </mat-submenu>
+                </mat-menu>
+            </script>
             <mat-menu-button target="demoCascading"></mat-menu-button>
             <mat-menu id="demoCascading">
                 <mat-option label="Option 1" toggleable active></mat-option>
@@ -36,8 +63,8 @@
                     <mat-option label="Sub option 3"></mat-option>
                 </mat-submenu>
             </mat-menu>
-
         </mat-demo>
+
     </template>
 
     <script>
