Updated dependencies and bug fixes

--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -16,6 +16,8 @@ This element is used to display a material submenu.
 @homepage http://expandjs.com/elements/mat-submenu
 @demo http://expandjs.com/demo/mat-menu
 
+@wraps mat-overlay http://expandjs.com/elements/mat-overlay
+
 @dependency polymer Polymer/polymer#^1.0.0
 @dependency expandjs ExpandJS/expandjs#0.9.3
 @dependency mat-icons ExpandJS/mat-icons#0.9.3
