Updated dependencies and bug fixes

--- a/demo-element.html
+++ b/demo-element.html
@@ -40,9 +40,12 @@
                         <mat-option label="Sub option 3"></mat-option>
                     </mat-submenu>
                     <mat-submenu label="Option 5">
-                        <mat-option label="Sub option 1"></mat-option>
-                        <mat-option label="Sub option 2"></mat-option>
+                        <mat-option label="Sub option 1" toggleable active></mat-option>
+                        <mat-option label="Sub option 2" toggleable></mat-option>
+                        <mat-divider></mat-divider>
                         <mat-option label="Sub option 3"></mat-option>
+                        <mat-option label="Sub option 4"></mat-option>
+                        <mat-option label="Sub option 5"></mat-option>
                     </mat-submenu>
                 </mat-menu>
             </script>
@@ -58,9 +61,12 @@
                     <mat-option label="Sub option 3"></mat-option>
                 </mat-submenu>
                 <mat-submenu label="Option 5">
-                    <mat-option label="Sub option 1"></mat-option>
-                    <mat-option label="Sub option 2"></mat-option>
+                    <mat-option label="Sub option 1" toggleable active></mat-option>
+                    <mat-option label="Sub option 2" toggleable></mat-option>
+                    <mat-divider></mat-divider>
                     <mat-option label="Sub option 3"></mat-option>
+                    <mat-option label="Sub option 4"></mat-option>
+                    <mat-option label="Sub option 5"></mat-option>
                 </mat-submenu>
             </mat-menu>
         </mat-demo>
