--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -8,6 +8,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 
 <!--
 This element is used to display a material submenu.
+It must be used in conjunction with mat-menu.
 
 @element mat-submenu
 @description A custom element used to display a Material Design submenu
@@ -17,20 +18,21 @@ This element is used to display a material submenu.
 @demo http://expandjs.com/demo/mat-menu
 
 @wraps mat-overlay http://expandjs.com/elements/mat-overlay
+@behavior xp-referral-behavior http://expandjs.com/elements/xp-referral-behavior
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.3
-@dependency mat-icons ExpandJS/mat-icons#0.9.3
-@dependency mat-option ExpandJS/mat-option#0.9.3
-@dependency mat-overlay ExpandJS/mat-overlay#0.9.3
-@dependency xp-master-state ExpandJS/xp-master-state#0.9.3
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.3
-@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.3
+@dependency expandjs ExpandJS/expandjs#0.9.4
+@dependency mat-icons ExpandJS/mat-icons#0.9.4
+@dependency mat-option ExpandJS/mat-option#0.9.4
+@dependency mat-overlay ExpandJS/mat-overlay#0.9.4
+@dependency xp-master-state ExpandJS/xp-master-state#0.9.4
+@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.4
+@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.4
 
-@devDependency mat-demo ExpandJS/mat-demo#0.9.3
-@devDependency mat-divider ExpandJS/mat-divider#0.9.3
-@devDependency mat-menu-button ExpandJS/mat-menu-button#0.9.3
-@devDependency mat-option ExpandJS/mat-option#0.9.3
+@devDependency mat-demo ExpandJS/mat-demo#0.9.4
+@devDependency mat-divider ExpandJS/mat-divider#0.9.4
+@devDependency mat-menu-button ExpandJS/mat-menu-button#0.9.4
+@devDependency mat-option ExpandJS/mat-option#0.9.4
 -->
 
 <link rel="import" href="../polymer/polymer.html">
@@ -41,6 +43,7 @@ This element is used to display a material submenu.
 <link rel="import" href="../xp-master-state/xp-master-state.html">
 <link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
 <link rel="import" href="../xp-slave-state/xp-slave-state.html">
+<link rel="import" href="mat-menu.html">
 
 <dom-module id="mat-submenu">
 
@@ -69,7 +72,7 @@ This element is used to display a material submenu.
         <template is="xp-slave-state" master="{{menu}}" master-tag="mat-menu"></template>
         <template is="xp-slave-state" master="{{supermenu}}" master-tag="mat-submenu"></template>
         <mat-option id="matSubmenuHolder" icon="[[icon]]" icon-src="[[iconSrc]]" label="[[label]]" secondary-icon="navigation:arrow-drop-down" on-xp-activate="_handleShow"></mat-option>
-        <mat-overlay id="matSubmenuOverlay" background="[[background]]" position="aside" showed="{{showed}}" target="[[self.$.matSubmenuHolder]]" z="[[z]]">
+        <mat-overlay id="matSubmenuOverlay" background="[[background]]" context="[[self]]" position="aside" showed="{{showed}}" target="[[self.$.matSubmenuHolder]]" z="[[z]]">
             <content id="content"></content>
         </mat-overlay>
     </template>
