--- a/demo-element.html
+++ b/demo-element.html
@@ -9,25 +9,48 @@
 
     <template>
 
-        <mat-demo label="mat-menu">
-            <script type="text/html">
+        <mat-demo name="mat-menu" type="element" url="http://expandjs.com/elements/mat-menu">
+
+            <mat-demo-panel label="mat-menu">
+                <script type="text/html">
+                    <mat-menu-button target="demoDefault"></mat-menu-button>
+                    <mat-menu id="demoDefault">
+                        <mat-option label="Option 1"></mat-option>
+                        <mat-option label="Option 2"></mat-option>
+                        <mat-option label="Option 3"></mat-option>
+                    </mat-menu>
+                </script>
                 <mat-menu-button target="demoDefault"></mat-menu-button>
                 <mat-menu id="demoDefault">
                     <mat-option label="Option 1"></mat-option>
                     <mat-option label="Option 2"></mat-option>
                     <mat-option label="Option 3"></mat-option>
                 </mat-menu>
-            </script>
-            <mat-menu-button target="demoDefault"></mat-menu-button>
-            <mat-menu id="demoDefault">
-                <mat-option label="Option 1"></mat-option>
-                <mat-option label="Option 2"></mat-option>
-                <mat-option label="Option 3"></mat-option>
-            </mat-menu>
-        </mat-demo>
+            </mat-demo-panel>
 
-        <mat-demo label="Cascading">
-            <script type="text/html">
+            <mat-demo-panel label="Cascading">
+                <script type="text/html">
+                    <mat-menu-button target="demoCascading"></mat-menu-button>
+                    <mat-menu id="demoCascading">
+                        <mat-option label="Option 1" toggleable active></mat-option>
+                        <mat-option label="Option 2" toggleable></mat-option>
+                        <mat-option label="Option 3" toggleable></mat-option>
+                        <mat-divider></mat-divider>
+                        <mat-submenu label="Option 4">
+                            <mat-option label="Sub option 1"></mat-option>
+                            <mat-option label="Sub option 2"></mat-option>
+                            <mat-option label="Sub option 3"></mat-option>
+                        </mat-submenu>
+                        <mat-submenu label="Option 5">
+                            <mat-option label="Sub option 1" toggleable active></mat-option>
+                            <mat-option label="Sub option 2" toggleable></mat-option>
+                            <mat-divider></mat-divider>
+                            <mat-option label="Sub option 3"></mat-option>
+                            <mat-option label="Sub option 4"></mat-option>
+                            <mat-option label="Sub option 5"></mat-option>
+                        </mat-submenu>
+                    </mat-menu>
+                </script>
                 <mat-menu-button target="demoCascading"></mat-menu-button>
                 <mat-menu id="demoCascading">
                     <mat-option label="Option 1" toggleable active></mat-option>
@@ -48,27 +71,8 @@
                         <mat-option label="Sub option 5"></mat-option>
                     </mat-submenu>
                 </mat-menu>
-            </script>
-            <mat-menu-button target="demoCascading"></mat-menu-button>
-            <mat-menu id="demoCascading">
-                <mat-option label="Option 1" toggleable active></mat-option>
-                <mat-option label="Option 2" toggleable></mat-option>
-                <mat-option label="Option 3" toggleable></mat-option>
-                <mat-divider></mat-divider>
-                <mat-submenu label="Option 4">
-                    <mat-option label="Sub option 1"></mat-option>
-                    <mat-option label="Sub option 2"></mat-option>
-                    <mat-option label="Sub option 3"></mat-option>
-                </mat-submenu>
-                <mat-submenu label="Option 5">
-                    <mat-option label="Sub option 1" toggleable active></mat-option>
-                    <mat-option label="Sub option 2" toggleable></mat-option>
-                    <mat-divider></mat-divider>
-                    <mat-option label="Sub option 3"></mat-option>
-                    <mat-option label="Sub option 4"></mat-option>
-                    <mat-option label="Sub option 5"></mat-option>
-                </mat-submenu>
-            </mat-menu>
+            </mat-demo-panel>
+
         </mat-demo>
 
     </template>
