- Added xp-adapter-behavior - Added xp-form - Improved xp-request - Major bug fixes - Updated dependencies - Updated documentation

--- a/demo-element.html
+++ b/demo-element.html
@@ -11,7 +11,7 @@
 
         <mat-demo name="mat-menu" type="element" url="http://expandjs.com/elements/mat-menu">
 
-            <mat-demo-panel label="mat-menu">
+            <mat-demo-panel label="Default">
                 <script type="text/html">
                     <mat-menu-button target="demoDefault"></mat-menu-button>
                     <mat-menu id="demoDefault">
