- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/mat-menu.html
+++ b/mat-menu.html
@@ -56,6 +56,7 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
 @keywords material design, material menu, web app, html5, expandjs, web-components
 @group containers
 @homepage http://expandjs.com/elements/mat-menu
+@repository https://github.com/ExpandJS/mat-menu
 @demo http://expandjs.com/demo/mat-menu
 
 @adapts mat-overlay /bower_components/mat-overlay/mat-overlay.html
