--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -30,6 +30,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 @keywords material design, material menu, web app, html5, expandjs, web-components
 @group containers
 @homepage http://expandjs.com/elements/mat-submenu
+@repository https://github.com/ExpandJS/mat-submenu
 @demo http://expandjs.com/demo/mat-menu
 
 @adapts mat-overlay /bower_components/mat-overlay/mat-overlay.html
