- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/mat-menu.html
+++ b/mat-menu.html
@@ -23,12 +23,12 @@ For an easier integration, it's recommended to use it in conjunction with
 ```
 
 In addition to the default view mode, it provides a
-[cascading](http://www.google.com/design/spec/components/menus.html#menus-menu-items) one,
+[cascade](http://www.google.com/design/spec/components/menus.html#menus-menu-items) one,
 which is similar to most desktop applications' menus.
 
 ```html
 <mat-menu-button target="myMenu"></mat-menu-button>
-<mat-menu id="myMenu" cascading>
+<mat-menu id="myMenu" cascade>
     <mat-option label="First option"></mat-option>
     <mat-option label="Second option"></mat-option>
     <mat-option label="Third option"></mat-option>
